updating  for swagger.tgz release 18.2.7

--- a/swagger/ApplicationPersistenceProfile.json
+++ b/swagger/ApplicationPersistenceProfile.json
@@ -598,6 +598,11 @@
         "IPPersistenceProfile": {
             "type": "object", 
             "properties": {
+                "ip_mask": {
+                    "type": "integer", 
+                    "description": "Mask to be applied on client IP. This may be used to persist clients from a subnet to the same server. When set to 0, all requests are sent to the same server. Allowed values are 0-128. Field introduced in 18.2.7.", 
+                    "format": "int32"
+                }, 
                 "ip_persistent_timeout": {
                     "default": 5, 
                     "type": "integer", 
