--- a/swagger/DebugVirtualService.yaml
+++ b/swagger/DebugVirtualService.yaml
@@ -352,6 +352,84 @@ paths:
 
 
 definitions:
+    CaptureFilters:
+        type: object
+        properties:
+            capture_ip:
+                description: "Per packet IP filter. Matches with source and destination address. Curently not applicable for DebugServiceEngine. Field introduced in 18.2.5."
+                $ref: '#/definitions/DebugIpAddr'
+            capture_ipc:
+                description: "Capture filter for SE IPC. Not applicable for Debug Virtual Service. Field introduced in 18.2.5."
+                $ref: '#/definitions/CaptureIPC'
+            dst_port_end:
+                description: "Destination Port range filter. Field introduced in 18.2.5."
+                type: integer
+                format: int32
+            dst_port_start:
+                description: "Destination Port range filter. Field introduced in 18.2.5."
+                type: integer
+                format: int32
+            eth_proto:
+                description: "Ethernet Proto filter. Enum options - ETH_TYPE_IPV4. Field introduced in 18.2.5."
+                type: string
+            ip_proto:
+                description: "IP Proto filter. Support for TCP only for now. Enum options - IP_TYPE_TCP. Field introduced in 18.2.5."
+                type: string
+            src_port:
+                description: "Source Port filter. Field introduced in 18.2.5."
+                type: integer
+                format: int32
+            tcp_ack:
+                description: "TCP ACK flag filter. Field introduced in 18.2.5."
+                type: boolean
+            tcp_fin:
+                description: "TCP FIN flag filter. Field introduced in 18.2.5."
+                type: boolean
+            tcp_push:
+                description: "TCP PUSH flag filter. Field introduced in 18.2.5."
+                type: boolean
+            tcp_syn:
+                description: "TCP SYN flag filter. Field introduced in 18.2.5."
+                type: boolean
+    CaptureIPC:
+        type: object
+        properties:
+            flow_del_probe:
+                description: "Flow del probe filter for SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            flow_mirror_add:
+                description: "Flow mirror add filter for SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            flow_mirror_all:
+                description: "Filter for all flow mirror SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            flow_mirror_del:
+                description: "Flow mirror del filter for SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            flow_probe:
+                description: "Flow probe filter for SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            flow_probe_all:
+                description: "Filter for all flow probe SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            ipc_batched:
+                description: "IPC batched filter for SE IPC. Field introduced in 18.2.5."
+                type: boolean
+            ipc_rx_req:
+                description: "Filter for incoming IPC request. Field introduced in 18.2.5."
+                type: boolean
+            ipc_rx_res:
+                description: "Filter for incoming IPC response. Field introduced in 18.2.5."
+                type: boolean
+            ipc_tx_req:
+                description: "Filter for outgoing IPC request. Field introduced in 18.2.5."
+                type: boolean
+            ipc_tx_res:
+                description: "Filter for outgoing IPC response. Field introduced in 18.2.5."
+                type: boolean
+            vs_hb:
+                description: "Vs heart beat filter for SE IPC. Field introduced in 18.2.5."
+                type: boolean
     DebugDnsOptions:
         type: object
         properties:
@@ -395,6 +473,9 @@ definitions:
             capture:
                 description: "Placeholder for description of property capture of obj type DebugVirtualService field type str  type boolean"
                 type: boolean
+            capture_filters:
+                description: "Per packet capture filters for Debug Virtual Service. Applies to both frontend and backend packets. Field introduced in 18.2.7."
+                $ref: '#/definitions/CaptureFilters'
             capture_params:
                 description: "Placeholder for description of property capture_params of obj type DebugVirtualService field type str  type object"
                 $ref: '#/definitions/DebugVirtualServiceCapture'
@@ -406,7 +487,7 @@ definitions:
                 type: string
                 default: "DEBUG_VS_HM_NONE"
             debug_ip:
-                description: "Placeholder for description of property debug_ip of obj type DebugVirtualService field type str  type object"
+                description: "Filters all packets of a complete transaction (client and server side), based on client ip."
                 $ref: '#/definitions/DebugIpAddr'
             dns_options:
                 description: "Dns debug options. Field introduced in 18.2.1."
