Assets updated for swagger specs

--- a/swagger/HealthMonitor.yaml
+++ b/swagger/HealthMonitor.yaml
@@ -401,6 +401,9 @@ definitions:
                 description: "UNIX time since epoch in microseconds. Units(MICROSECONDS)."
                 readOnly: True
                 type: string
+            allow_duplicate_monitors:
+                description: "By default, multiple instances of the same healthmonitor to the same server are suppressed intelligently. In rare cases, the monitor may have specific constructs that go beyond the server keys (ip, port, etc.) during which such suppression is not desired. Use this knob to allow duplicates. Field introduced in 18.2.8."
+                type: boolean
             description:
                 description: "User defined description for the object."
                 type: string
