AV-71899 Set VRF reference to global when none vrf existing on F5

--- a/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
@@ -3182,3 +3182,41 @@ sys software update {
 }
 wom endpoint-discovery { }
 
+ltm virtual-address /Common/10.1.1.118%101 {
+    address 10.1.1.118%101
+    arp enabled
+    icmp-echo enabled
+    mask 255.255.255.255
+    traffic-group /Common/traffic-group-1
+}
+ltm virtual /Common/vs_custome_vrf {
+    destination /Common/10.1.1.118%101
+    ip-protocol tcp
+    mask 255.255.255.255
+    pool /Common/Peer_test
+    profiles {
+        /Common/hdrInsert {}
+        /Common/tcp { }
+    }
+    persist {
+        /Common/cookie {
+            default yes
+        }
+    }
+    source 0.0.0.0/0
+    source-address-translation {
+        type automap
+    }
+    translate-address enabled
+    translate-port enabled
+}
+ltm node /Common/10.1.1.90%101 {
+    address 10.1.1.90%101
+}
+ltm pool /Common/Peer_test {
+    members {
+        /Common/10.1.1.90%101:443 {
+            address Common/10.1.1.90%101
+        }
+    }
+}
