--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
     - language: python
       python: "2.7"
       install:
-      - pip install pytest==4.4.0 pyyaml requests==2.8.1 pyparsing paramiko==1.18.2 avisdk pycrypto==2.6.1 ecdsa==0.13 pyOpenssl==17.4.0 nose-html-reporting nose-testconfig ConfigParser xlsxwriter jinja2 pandas openpyxl appdirs pexpect xlrd unittest2 networkx==2.2 vcrpy pytest-mock==1.10.3 pytest-cov pytest-xdist==1.28.0 parameterized==0.7.0
+      - pip install pytest==4.4.0 pyyaml requests==2.8.1 pyparsing paramiko==1.18.2 avisdk pycrypto==2.6.1 ecdsa==0.13 pyOpenssl==17.4.0 nose-html-reporting nose-testconfig ConfigParser xlsxwriter jinja2 pandas openpyxl appdirs pexpect xlrd unittest2 networkx==2.2 vcrpy pytest-mock==1.10.3 pytest-cov pytest-xdist==1.28.0 parameterized==0.7.0 requests_toolbelt==0.8.0
       - sudo pip install flask
       - export PYTHONPATH=$PWD/python/
       - echo $PYTHONPATH
@@ -49,7 +49,7 @@ matrix:
     - language: python
       python: "3.5"
       install:
-      - pip3.5 install pytest==4.4.0 pyyaml requests==2.22.0 pyparsing paramiko==1.18.2 avisdk pycrypto==2.6.1 ecdsa==0.13 pyOpenssl==17.4.0 nose-html-reporting nose-testconfig ConfigParser xlsxwriter jinja2 pandas openpyxl appdirs pexpect xlrd unittest2 networkx==2.2 vcrpy pytest-mock==1.10.3 pytest-cov pytest-xdist==1.28.0 parameterized==0.7.0
+      - pip3.5 install pytest==4.4.0 pyyaml requests==2.22.0 pyparsing paramiko==1.18.2 avisdk pycrypto==2.6.1 ecdsa==0.13 pyOpenssl==17.4.0 nose-html-reporting nose-testconfig ConfigParser xlsxwriter jinja2 pandas openpyxl appdirs pexpect xlrd unittest2 networkx==2.2 vcrpy pytest-mock==1.10.3 pytest-cov pytest-xdist==1.28.0 parameterized==0.7.0 requests_toolbelt==0.8.0
       - export PYTHONPATH=$PWD/python/
       - echo $PYTHONPATH
       script:
@@ -92,3 +92,4 @@ notifications:
       - shrikant.patil@avinetworks.com
       - ashwini.bodke@avinetworks.com
     on_failure: always
+
