--- a/java/pom.xml
+++ b/java/pom.xml
@@ -215,5 +215,10 @@
 			<artifactId>httpmime</artifactId>
 			<version>4.5.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.12.4</version>
+		</dependency>
 	</dependencies>
 </project>
