fixed f5 default config

--- a/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
@@ -1623,6 +1623,21 @@ ltm monitor dns /Common/dnsTest {
     time-until-up 0
     timeout 16
 }
+ltm profile client-ssl /Common/monitor.fmr.com {
+    app-service none
+    cert-key-chain {
+        monitor.fmr.com {
+            cert /Common/monitor.fmr.com.crt
+            chain none
+            key /Common/monitor.fmr.com.key
+            passphrase none
+        }
+    }
+    cert /Common/monitor.fmr.com.crt
+    chain none
+    key /Common/monitor.fmr.com.key
+    passphrase none
+}
 ltm monitor external /Common/Bigip-support-Monitor-External {
     defaults-from /Common/external
     destination *:*
