Removed vsvip object from vs and updated cassettes from 18.2.10 controller (#1177)
* Removed vsvip vs object and updated cassets from 18.2.10 controller

* Updaed controller ip in cassette clone_vs

* Update test_clone_vs for Jenkins

* Correct IP in test_clone_vs cassette

* updated test_clone_vs: version fetched from login_info

* test_clone_vs source VS using vsvip

* updated cassettes for test_clone_vs

* Cassette api version to 18.2.10

* Reset cassette for test_clone_vs

Co-authored-by: thebertster <rcasula@vmware.com>
Co-authored-by: Shounak Joshi <shounak.joshi@avinetworks.com>

--- a/python/avi/sdk/test/test_api.cfg
+++ b/python/avi/sdk/test/test_api.cfg
@@ -1,10 +1,10 @@
 {
     "LoginInfo": {
-        "controller_ip": "10.10.25.42",
+        "controller_ip": "10.79.171.121",
         "username": "admin",
         "password": "password",
         "tenant": "admin",
-        "api_version": "18.2.3",
+        "api_version": "18.2.10",
         "data_log": true
     },
 
@@ -26,22 +26,26 @@
                 "port": 80
             }]
         },
-        "vs_obj": {
-            "name": "basic_vs",
-            "type": "VS_TYPE_NORMAL",
-            "vip": [
+        "vsvip_obj": {
+          "name": "basic_vs_vip",
+          "vip": [
             {
                 "ip_address": {
                     "addr": "10.90.64.123",
                     "type": "V4"
                 }
             }
-            ],
+          ]
+        },
+        "vs_obj": {
+            "name": "basic_vs",
+            "type": "VS_TYPE_NORMAL",
             "enabled": true,
             "services": [{
                 "port": 80,
                 "enable_ssl": false
             }],
+            "vsvip_ref": "basic_vs_vip",
             "application_profile_name": "System-HTTP"
         }
     },
@@ -59,22 +63,26 @@
                 "port": 80
             }]
         },
-        "vs_obj": {
-            "name": "ssl_vs",
-            "type": "VS_TYPE_NORMAL",
-            "vip": [
+        "vsvip_obj": {
+          "name": "basic_sslvs_vip",
+          "vip": [
             {
                 "ip_address": {
                     "addr": "10.90.64.123",
                     "type": "V4"
                 }
             }
-            ],
+          ]
+        },
+        "vs_obj": {
+            "name": "ssl_vs",
+            "type": "VS_TYPE_NORMAL",
             "enabled": true,
             "services": [{
                 "port": 443,
                 "enable_ssl": true
             }],
+            "vsvip_ref": "basic_sslvs_vip",
             "ssl_profile_name": "System-Standard",
             "application_profile_name": "System-Secure-HTTP"
         }
