fixed test failing on travis

--- a/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
@@ -771,6 +771,22 @@ ltm pool /Common/testpool {
     }
     monitor /Common/gateway_icmp 
 }
+
+ltm pool /Common/testpool_shared {
+    load-balancing-mode weighted-least-connections-node
+    members {
+        /Common/10.90.115.10:80 {
+            address 10.90.115.10
+            connection-limit 50
+        }
+        /Common/10.90.115.11:80 {
+            address 10.90.115.11
+            connection-limit 50
+        }
+    }
+    monitor /Common/gateway_icmp
+}
+
 ltm pool /Common/pool10.90.114.129 {
     members {
         /Common/10.90.114.129:22 {
@@ -883,6 +899,29 @@ ltm virtual /Common/EngVIP {
     translate-address enabled
     translate-port enabled
 }
+
+ltm virtual /Common/vs_2_up {
+    destination /Common/10.90.114.203:80
+    ip-protocol tcp
+    mask 255.255.255.255
+    pool /Common/testpool_shared
+    profiles {
+        /Common/hdrInsert {}
+        /Common/tcp { }
+    }
+    persist {
+        /Common/cookie {
+            default yes
+        }
+    }
+    source 0.0.0.0/0
+    source-address-translation {
+        type automap
+    }
+    translate-address enabled
+    translate-port enabled
+}
+
 ltm virtual /Common/F5-VIP-80-001 {
     description "My HTTP VIP"
     destination /Common/192.168.38.20:80
@@ -1308,7 +1347,7 @@ ltm virtual /Common/vs_1_up {
     destination /Common/10.90.114.200:80
     ip-protocol tcp
     mask 255.255.255.255
-    pool /Common/testpool
+    pool /Common/testpool_shared
     profiles {
         /Common/hdrInsert {}
         /Common/tcp { }
