--- a/python/avi/migrationtools/f5_converter/test/bigip_v10.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v10.conf
@@ -490,6 +490,32 @@ pool F5-v10-Pool-001 {
       }
    }
 }
+
+pool TEST-SHARED {
+   action on svcdown reselect
+   slow ramp time 22
+   monitor all F5-v10-Monitor-https-001
+   members {
+      10.90.114.120:http {
+         limit 50
+      }
+      10.90.115.10:http {
+         limit 50
+         session user disabled
+         monitor F5-v10-Monitor-HTTP-002
+      }
+      10.90.115.11:http {
+         limit 50
+      }
+      10.90.115.12:http {
+         limit 50
+      }
+      10.90.115.13:http {
+         limit 50
+      }
+   }
+}
+
 pool F5-v10-Pool-002 {
    lb method member least conn
    action on svcdown reset
@@ -541,7 +567,7 @@ virtual address 10.10.20.0 {
 }
 
 virtual F5-v10-VIP-443-002 {
-   pool F5-v10-Pool-001
+   pool TEST-SHARED
    destination 192.168.38.41:https
    ip protocol tcp
    profiles {
@@ -557,7 +583,7 @@ virtual F5-v10-VIP-443-002 {
 }
 
 virtual F5-v10-VIP-443-003 {
-   pool F5-v10-Pool-001
+   pool TEST-SHARED
    destination 192.168.38.44:https
    ip protocol tcp
    profiles {
