#AV-93055: f5_converter.py output file is incomplete json

--- a/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
@@ -1667,7 +1667,7 @@ ltm profile client-ssl /Common/monitor.fmr.com {
     cert-key-chain {
         monitor.fmr.com {
             cert /Common/monitor.fmr.com.crt
-            chain none
+            chain /Common/monitor.fmr.com.crt
             key /Common/monitor.fmr.com.key
             passphrase none
         }
