#AV-98972: Config_patch.py Script: Not recognising regex and match criteria example is incorrect

--- a/python/avi/migrationtools/f5_converter/test/patch.yaml
+++ b/python/avi/migrationtools/f5_converter/test/patch.yaml
@@ -4,7 +4,7 @@ Pool:
       name: coolpool
       cloud_ref: /api/cloud/?name=AWS
 
-  - match_regex_name: "*cicd*"
+  - match_name_regex: ".*cicd.*"
     patch:
       enabled: False
       tenant_ref: /api/tenant/?name=awesome
